fix changelog alignment, closes #28

--- a/style/components/base.styl
+++ b/style/components/base.styl
@@ -142,6 +142,13 @@ ul
     margin: 0 0 20px 0
     list-style-type: disc
 
+  &.nodots
+    margin: 0
+
+    li
+      margin: 0
+      list-style-type: none
+
   &.unstyled
     margin: 0
 
